# City

./: .gitignore  LICENSE_ASSETS.md  README.md  icon.svg.import  install_city.bat  project.godot  start.bat  start_city.bat  start_crowd.bat
addons/city_voxel/: city_voxel.gdextension
native/city_voxel/: Cargo.toml  README.md
native/city_voxel/src/: lib.rs
scenes/: city_poc.tscn  inspect_humans.tscn  main.tscn
scripts/: inspect_humans_poc.gd  inspect_humans_poc.gd.uid  main.gd  main.gd.uid  showcase_hud.gd  showcase_hud.gd.uid
shaders/: ped_clothes.gdshader  ped_clothes.gdshader.uid
tools/: _aabb_lines.py  bake_mixamo.ps1  bake_mixamo_library.gd  bake_mixamo_library.gd.uid  blender_export_mpfb_humans.py  blender_export_mpfb_outfits.py  blender_split_kenney_glass.py  build_city_voxel.ps1  diagnose_arm_rests.gd  diagnose_arm_rests.gd.uid  diagnose_arm_rests2.gd  diagnose_arm_rests2.gd.uid  diagnose_axes.gd  diagnose_axes.gd.uid  diagnose_bind.gd  diagnose_bind.gd.uid  diagnose_neutral_bone.gd  diagnose_neutral_bone.gd.uid  diagnose_pose_mul.gd  diagnose_pose_mul.gd.uid  diagnose_posed_samples.gd  diagnose_posed_samples.gd.uid  diagnose_rest.gd  diagnose_rest.gd.uid  diagnose_rs_skel.gd  diagnose_rs_skel.gd.uid  diagnose_skel_vs_mesh.gd  diagnose_skel_vs_mesh.gd.uid  diagnose_skin.gd  diagnose_skin.gd.uid  diagnose_stuck_verts.gd  diagnose_stuck_verts.gd.uid  diagnose_toe_follow.gd  diagnose_toe_follow.gd.uid  diagnose_weights_feet.gd  diagnose_weights_feet.gd.uid  download_blender_mpfb.py  download_mh_clothes_packs.py  download_mh_packs.py  dump_bones.gd  (+65 more)
(+284 files in other folders)
